pihole/pihole-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
spec:
  finalizers:
    - kubernetes
