pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - image: pihole/pihole:latest
        name: pihole
        securityContext:
          privileged: true
        ports: 
          - containerPort: 53
            protocol: TCP
            name: pihole-tcp
          - containerPort: 53
            protocol: UDP
            name: pihole-udp
          # Commenting out do to port confilict with port 80 already in use in my own cluster
          - containerPort: 80
            protocol: TCP
            name: pihole-admin
        volumeMounts:
          - name: pihole
            mountPath: /etc/pihole
          - name: dnsmasq
            mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole-pihole-claim
         ## path: /mnt/pihole/pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-claim
         ## path: /mnt/pihole/dnsmasq.d
      nodeSelector:
        disk: disk1
