pihole/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-ui-svc
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 80
    name: pihole-ui
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns-svc
spec:
  selector:
    app: pihole
  type: ClusterIP
  clusterIP: 10.43.0.30
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns-udp
spec:
  selector:
    app: pihole
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.201
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-dns-tcp
spec:
  selector:
    app: pihole
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.201
