pihole/pihole-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  rules:
  - host: host.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
             name: pihole
             port:
               number: 80
